--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Ruby Gems search app</title>
   <link rel="stylesheet" href="./src/base.css" />
 </head>
 <body>
-  <h1 class="big-lorem-ipsum">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor...</h1>
+<div id="app"></div>
+<script src="index.js"></script>
 </body>
 </html>
