--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Ruby Gems search app</title>
   <link rel="stylesheet" href="./src/base.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
