Created buttons, changed css, moved files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Ruby Gems search app</title>
-  <link rel="stylesheet" href="./src/base.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/base.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
